changed the path for image

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </header><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
     
     <div>
-        <img class="baby_image" src="./Images/baby.jfif" /></div><div style="position: relative"><p>
+        <img class="baby_image" src="baby.jfif" /></div><div style="position: relative"><p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu felis elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin scelerisque, nibh non ultrices venenatis, justo mi tincidunt sem, at dapibus urna metus et ex. Maecenas egestas metus in tristique porta. Pellentesque ultricies felis odio, et pharetra tellus pulvinar id. Fusce hendrerit faucibus massa, sit amet sollicitudin leo congue ut. Quisque scelerisque mi lorem, vel posuere mauris auctor in. Pellentesque enim tortor, maximus vel cursus blandit, ultrices sit amet arcu. Praesent a nisl vitae erat condimentum varius nec sit amet ligula.</p>
     
     </div>
