--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <header>
     <h1 class="head">Babies are the future</h1>
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="Tips.html">Tips</a></li>    
             <li><a href="Recipes.html">Food recipes</a></li>
             <li><a href="contact_us.html">Contact Us</a></li>
